fix overflow

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ html, body {
   font-family: 'Poppins', sans-serif;
   color: white;
   height: 100%;
+
+  overflow-x: hidden;
 }
 
 #container {
